<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/ic_launcher" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->
        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true" >
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Registration Form -->
        <!-- Registration Form Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <EditText
                    android:id="@+id/gomoku_reg_fisrtname"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:ems="10"
                    android:hint="@string/gomoku_fisrtname"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/gomoku_reg_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:ems="10"
                    android:hint="@string/gomoku_lastname"
                    android:singleLine="true" />

            </LinearLayout>

            <EditText
                android:id="@+id/gomoku_reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/gomoku_username"
                android:singleLine="true" />

            <EditText
                android:id="@+id/gomoku_reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/gomoku_email"
                android:singleLine="true" />

            <EditText
                android:id="@+id/gomoku_reg_mobile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gomoku_mobile"
                android:singleLine="true" />

            <EditText
                android:id="@+id/gomoku_reg_password1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/gomoku_password"
                android:password="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/gomoku_reg_password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:ems="10"
                android:hint="@string/gomoku_conf_pass"
                android:password="true"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/gomoku_btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:hint="register" />

            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:gravity="center"
                android:text="@string/gomoku_login"
                android:textColor="#025f7c"
                android:textSize="20dip" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>